--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A simple application to store information about the national football team players (The Black Stars).",
   "main": "app.ts",
   "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Quarcoo",
