--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Michael Quarcoo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openid-connect": "^2.9.0"
