--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.9.0"
+    "express-openid-connect": "^2.9.0",
+    "jose": "^4.10.4",
+    "jsonwebtoken": "^8.5.1",
+    "mkdirp": "^1.0.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
