--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openid-connect": "^2.9.0",
+    "express-session": "^1.17.3",
     "jose": "^4.10.4",
     "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
