--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jose": "^4.10.4",
     "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
+    "mongoose": "^6.7.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "sqlite3": "^5.1.2"
