--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "connect-ensure-login": "^0.1.1",
+    "connect-sqlite3": "^0.9.13",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openid-connect": "^2.9.0",
     "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
     "jose": "^4.10.4",
     "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
