--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/mkdirp": "^1.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.8",
     "concurrently": "^7.5.0",
